debug2.txt
D:\THG\ToolAI\thg-lead-gen\ai\agents\enrichment\websiteScanner.js:120
                        let newCat = acc.category ?\`\${acc.category} (\${result.platform})\` : result.platform;
                                                   ^

SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1378:20)
    at Module._compile (node:internal/modules/cjs/loader:1428:41)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)
    at Module.load (node:internal/modules/cjs/loader:1288:32)
    at Module._load (node:internal/modules/cjs/loader:1104:12)
    at Module.require (node:internal/modules/cjs/loader:1311:19)
    at require (node:internal/modules/helpers:179:18)
    at Object.<anonymous> (D:\THG\ToolAI\thg-lead-gen\backend\index.js:16:24)
    at Module._compile (node:internal/modules/cjs/loader:1469:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1548:10)